@@ -225,12 +225,12 @@ SEE ALSO
         Perl extension module for reading html/sgml/xml files by tags.
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Špaček 2005-2021
+     © Michal Josef Špaček 2005-2021
      BSD 2-Clause License
 
 VERSION
