@@ -2,6 +2,7 @@
  - Add .travis.yml file.
  - Add test comments.
  - Update Module::Install to 1.19 version.
+ - Update author name.
  - Update copyright years.
  - Update examples/ directory.
 
